--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,6 +416,10 @@ section {
   color: #1f5297;
 }
 
+.publications {
+	background-color: red;
+}
+
 /*--------------------------------------------------------------
 # Akills
 --------------------------------------------------------------*/
