--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -347,7 +348,6 @@ section {
 .about .content ul li {
   margin-bottom: 20px;
   display: flex;
-  align-items: center;
 }
 
 .about .content ul strong {
@@ -416,12 +416,15 @@ section {
   color: #1f5297;
 }
 
+/*--------------------------------------------------------------
+# Publications - testing/experiment here for classes
+--------------------------------------------------------------*/
+
 .publications {
-	background-color: red;
 }
 
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
