--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,6 +365,11 @@ section {
   margin-bottom: 0;
 }
 
+.margin {
+	margin-right: -50px
+}
+
+
 /*--------------------------------------------------------------
 # Facts
 --------------------------------------------------------------*/
