--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ h6 {
 .nav-menu a:focus i {
   font-size: 24px;
   padding-right: 8px;
-  color: #6f7180;
+  color: #718f81;
 }
 
 .nav-menu a:hover,
@@ -183,14 +183,14 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   text-decoration: none;
-  color: #fff;
+  color: #00ff89;
 }
 
 .nav-menu a:hover i,
 .nav-menu .active i,
 .nav-menu .active:focus i,
 .nav-menu li:hover>a i {
-  color: #149ddd;
+  color: #21ff98;
 }
 
 /* Mobile Navigation */
@@ -322,7 +322,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+  background: #198754;
   bottom: 0;
   left: 0;
 }
@@ -706,10 +706,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #149ddd;
+  background: #62845e;
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #149ddd;
+  border: 1px solid #051210;
 }
 
 .services .icon i {
@@ -723,7 +723,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #149ddd;
+  color: #051210;
 }
 
 .services .title {
