--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
+  background: #198754;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -203,7 +203,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #149ddd;
+  background-color: #198754;
   color: #fff;
   width: 40px;
   height: 40px;
@@ -269,7 +269,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #049f57;
 }
 
 @media (min-width: 1024px) {
