--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,7 +357,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #149ddd;
+  color: #198754;
   line-height: 0;
 }
 
