--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ section {
   font-size: 16px;
   margin-right: 5px;
   color: #198754;
-  line-height: 0;
+  line-height: normal;
 }
 
 .about .content p:last-child {
@@ -368,6 +368,43 @@ section {
 .margin {
 	margin-right: auto
 }
+
+
+/*--------------------------------------------------------------
+# Skills
+--------------------------------------------------------------*/
+.skills .content h3 {
+  font-weight: 700;
+  font-size: 26px;
+  color: #173b6c;
+}
+
+.skills .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.skills .content ul li {
+  margin-bottom: 0px;
+  display: flex;
+}
+
+.skills .content ul strong {
+  margin-right: 10px;
+}
+
+.skills .content ul i {
+  font-size: 16px;
+  margin-right: 5px;
+  color: #198754;
+  line-height: -1px;
+}
+
+.skills .content p:last-child {
+  margin-bottom: 0;
+}
+
+
 
 
 /*--------------------------------------------------------------
