--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #149ddd;
+  color: #198754;
   text-decoration: none;
 }
 
 a:hover {
-  color: #37b3ed;
+  color: #d4ab2e;
   text-decoration: none;
 }
 
@@ -79,7 +79,7 @@ h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #040b14;
+  background: #292325;
   overflow-y: auto;
 }
 
@@ -87,7 +87,7 @@ h6 {
   margin: 15px auto;
   display: block;
   width: 120px;
-  border: 8px solid #2c2f3f;
+  border: 8px solid #211c1c;
 }
 
 #header .profile h1 {
@@ -109,7 +109,7 @@ h6 {
 #header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #212431;
+  background: #211c1c;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -175,7 +175,7 @@ h6 {
 .nav-menu a:focus i {
   font-size: 24px;
   padding-right: 8px;
-  color: #718f81;
+  color: #8f8c71;
 }
 
 .nav-menu a:hover,
@@ -183,14 +183,14 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   text-decoration: none;
-  color: #00ff89;
+  color: #f5bd17;
 }
 
 .nav-menu a:hover i,
 .nav-menu .active i,
 .nav-menu .active:focus i,
 .nav-menu li:hover>a i {
-  color: #21ff98;
+  color: #d6aa0e;
 }
 
 /* Mobile Navigation */
@@ -269,7 +269,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #049f57;
+  border-bottom: 3px solid #258757;
 }
 
 @media (min-width: 1024px) {
@@ -313,7 +313,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #173b6c;
+  color: #292325;
 }
 
 .section-title h2::after {
@@ -366,7 +366,17 @@ section {
 }
 
 .margin {
-	margin-right: auto
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.greenhr {
+  background-color: #198754;
+  max-width: 60%;
+  margin: auto;
+  height: 3px;
+  opacity: 1;
+  border: none;
 }
 
 
